# ZhouAgent

./: .gitignore  Agent.md  CONTEXT.md  profile.md  pyproject.toml  strange.md  todo.md  use.md
.github/workflows/: ci.yml
docs/: memory方案文档.md  skills方案文档.md  tools方案文档.md  会话流式输出方案文档.md  项目目录结构文档.md
docs/memory/: 5.md  记忆机制实现详解.md
docs/new-function/: daily-memory-analytics-architecture.md  daily-memory-analytics-grilling.md
docs/roll-back/: 单轮对话回滚方案.md
docs/test/: Agent回归测试Runner设计.md  Agent断言设计.md  Agent结构化回归测试设计（目录结构与Case格式）.md  测试开发增强方案.md
src/zhou/: __init__.py  global_archive.py  main.py  rollback.py  session.py  skills.py  test_runner.py  testcases.py  tools.py  tui.py
src/zhou/core/: __init__.py  commands.py  config.py  errors.py  llm.py
src/zhou/memory/: __init__.py  commands.py  enrichment.py  manager.py  model.py
test/: README.md  use.md
test/agent_cases/answer/: answer_should_include_codebase_context.json
test/agent_cases/memory/: memory_search_should_participate_in_answer.json
test/agent_cases/smoke/: plain_question_should_not_call_tool.json
test/agent_cases/tools/: read_agent_file_should_call_read_tool.json
test/docs/: important.md  session_flow_call_chain.md  session_state_tests_review.md
tests/integration/: test_main_flow.py  test_session_flow.py
zhou项目代码结构/: 代码文件与函数梳理.md  图册.html  总图与子流程图.md
测开/: guideLine.md  mind.md
