[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zhou-agent"
version = "0.1.0"
description = "zhou CLI Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1.0",
  "mem0ai==2.0.1",
  "sentence-transformers>=3.0,<4.0",
  "qdrant-client>=1.9,<2.0",
]

[project.scripts]
zhou = "zhou.main:main"
zhou-case-loader = "zhou.testcases:main"
zhou-real-runner = "zhou.test_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
